BalanceController created + some refactoring
